page card hobby gap issue, support success msg updated

--- a/src/components/_modals/EditProfile/Hobby/styles.module.css
+++ b/src/components/_modals/EditProfile/Hobby/styles.module.css
@@ -26,8 +26,8 @@
 
 @media screen and (min-width: 1100px) {
   .modal-wrapper {
-    max-height: calc(100vh - 2rem);
-    min-height: calc(100vh - 6rem);
+    max-height: calc(100vh - 6rem);
+    
     height: 100%;
     /* min-height: 30rem; */
   }
